--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
     hooks:
       - id: ruff
         name: ruff lint
-        entry: ruff
+        entry: ruff check
         language: python
         args: [--fix]
         types: [python]
