feat: Criado testes automatizados e unitarios da classe de modelo User

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,3 +37,4 @@ repos:
         language: system
         args: ["-q", "--confidence-level", "low"]
         types: [python]
+        exclude: tests/.*
