--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ exclude = '''
 
 
 [tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function" 
 testpaths = ["tests"]
 python_files = ["testa_*.py", "*_testa.py"]
 python_classes = ["Testa*"]
