Criação de enpoints basicos de auth-router e outros ajustes

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,9 @@ email-validator
 pytest-asyncio
 passlib
 pydantic-settings
-bcrypt
+bcrypt==4.0.1
 aiosqlite
 pre-commit
 mypy
 bandit
-jwt
-types-PyJWT
+PyJWT
