--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
       env:
         DB_URL: postgresql+asyncpg://test:test@localhost:5432/test
       run: |
-        pytest -v --cov=.
+        pytest --cov -v
 
     - name: Upload coverage report
       uses: codecov/codecov-action@v3
