--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,11 @@ jobs:
     - name: Run tests
       env:
         DB_URL: postgresql+asyncpg://test:test@localhost:5432/test
+        ALGORITHM: HS256
+        REFRESH_TOKEN_EXPIRE_DAYS: 7
+        ACCESS_TOKEN_EXPIRE_MINUTES: 30
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        
       run: |
         pytest --cov -v
 
